# qlib

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  single_factor_backtest.py  verify_claims.py
Q&A/: 20260503.md  20260505.md
config/: config.py  paths.yaml  strategy.yaml  strategy_backtest_20260401.yaml  trading.yaml
core/: compute.py  data_loader.py  factors.py  lgbm_scorer.py  position.py  qlib_init.py  selection.py  stock.py  strategy.py  universe.py  validity.py
docs/: analysis_factor_theory_mapping.md  factor_data.csv  research_findings.md  research_summary.md  research_topics.md  strategy_plan.md  tushare_download_plan.md
plan/: 20260503.md
scripts/: ablate_push25_combo_factors.py  alpha158_batch_backtest.py  alpha158_lgbm_backtest.py  alpha158_lgbm_fill_full.py  alpha158_scan.py  analyze_factor_correlation_and_pruning.py  analyze_results_inventory.py  analyze_xuntou_factors.py  audit_price_fields.py  backtest_model_signal.py  batch_backtest.py  build_ai_training_pptx.py  build_alpha158_data.sh  build_qlib_data.py  compare_overlay_to_index_yearly.py  csi800_opt_sweep.py  daily_run.sh  data_quality_guard.py  data_update.py  diagnose_cq7_fusion_drop.py  dispersion_regime.py  download_tushare.sh  estimate_layer_weights.py  evaluate_three_window_candidates.py  factor_correlation_analysis.py  factor_mining.py  factor_scan.py  factor_stability_rank.py  fix_ohlcv_adjustment.py  fix_raw_ohlc_bins_from_raw_data.py  formal_single_factor_batch.py  formal_single_factor_nocost.py  formal_single_factor_pybroker_day.py  generate_model_scores.py  (+69 more)
(+894 files in other folders)
